# winuxsh

./: .winshrc.toml  Cargo.toml  README-zh.md  README.md  build.rs  test.txt
DOCS/: known-issues-and-roadmap.md
crates/winsh-ast/: Cargo.toml
crates/winsh-ast/src/: expr.rs  lib.rs  redir.rs  span.rs  stmt.rs  token.rs  word.rs
crates/winsh-builtins/: Cargo.toml
crates/winsh-builtins/src/: lib.rs
crates/winsh-builtins/src/core/: mod.rs
crates/winsh-complete/: Cargo.toml
crates/winsh-complete/src/: completer.rs  lib.rs
crates/winsh-config/: Cargo.toml
crates/winsh-config/src/: lib.rs  loader.rs
crates/winsh-core/: Cargo.toml
crates/winsh-core/src/: arithmetic.rs  conditional.rs  config.rs  env.rs  error.rs  expansion.rs  glob.rs  heredoc.rs  lib.rs  state.rs  value.rs
crates/winsh-exec/: Cargo.toml
crates/winsh-exec/src/: backend.rs  executor.rs  job.rs  lib.rs  pipeline.rs  redir.rs  security.rs  signal.rs
crates/winsh-ffi/: Cargo.toml
crates/winsh-ffi/src/: lib.rs
crates/winsh-history/: Cargo.toml
crates/winsh-history/src/: lib.rs  manager.rs
crates/winsh-keybind/: Cargo.toml
crates/winsh-keybind/src/: lib.rs
crates/winsh-lexer/: Cargo.toml
crates/winsh-lexer/src/: lexer.rs  lib.rs  quote.rs  token.rs
crates/winsh-parser/: Cargo.toml
crates/winsh-parser/src/: lib.rs  parser.rs
crates/winsh-plugin/: Cargo.toml
crates/winsh-plugin/src/: lib.rs
crates/winsh-prompt/: Cargo.toml
crates/winsh-prompt/src/: engine.rs  lib.rs
examples/: .winshrc
src/: builtins.rs  command_router.rs  config.rs  executor.rs  main.rs  plugin.rs  shell.rs  winuxcmd_ffi.rs
tests/integration/: shell_basic.rs
tools/: install-backend.ps1
utils/: README.md
utils/winuxcmd/: winuxcore.exp
