[workspace]
resolver = "2"
members = [
    "crates/*",
    ".",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/user/winuxsh"
description = "WinSH - A zsh-compatible shell for Windows"

[workspace.dependencies]
# Core dependencies
winsh-ast = { path = "crates/winsh-ast" }
winsh-core = { path = "crates/winsh-core" }
winsh-lexer = { path = "crates/winsh-lexer" }
winsh-parser = { path = "crates/winsh-parser" }
winsh-exec = { path = "crates/winsh-exec" }
winsh-builtins = { path = "crates/winsh-builtins" }
winsh-complete = { path = "crates/winsh-complete" }
winsh-history = { path = "crates/winsh-history" }
winsh-prompt = { path = "crates/winsh-prompt" }
winsh-config = { path = "crates/winsh-config" }
winsh-keybind = { path = "crates/winsh-keybind" }
winsh-plugin = { path = "crates/winsh-plugin" }
winsh-ffi = { path = "crates/winsh-ffi" }

# External dependencies
reedline = { version = "0.34", features = ["bashisms", "system_clipboard"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
globset = "0.4"
dirs = "5.0"
nu-ansi-term = "0.50"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
] }
log = "0.4"
env_logger = "0.11"
colored = "2.1"
toml = "0.8"

# Dev dependencies
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"

[package]
name = "winuxsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WinSH - A zsh-compatible shell for Windows"

[[bin]]
name = "winsh"
path = "src/main.rs"

[dependencies]
winsh-ast.workspace = true
winsh-core.workspace = true
winsh-lexer.workspace = true
winsh-parser.workspace = true
winsh-exec.workspace = true
winsh-builtins.workspace = true
winsh-complete.workspace = true
winsh-history.workspace = true
winsh-prompt.workspace = true
winsh-config.workspace = true
winsh-keybind.workspace = true
winsh-plugin.workspace = true

reedline.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
colored.workspace = true
dirs.workspace = true
nu-ansi-term.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true

[features]
default = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
