[package]
name = "winsh-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WinSH configuration management"

[dependencies]
winsh-core.workspace = true
winsh-lexer.workspace = true
winsh-parser.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
dirs.workspace = true
