[package]
name = "winsh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WinSH core types and state management"

[dependencies]
winsh-ast.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
