[package]
name = "winsh-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WinSH execution engine - pipelines, redirections, job control"

[dependencies]
winsh-ast.workspace = true
winsh-core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
