[package]
name = "winsh-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WinSH history management and expansion"

[dependencies]
winsh-core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
dirs.workspace = true
